# atlas-camera

./: .comfyignore  .comfyui-agent.example.json  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  PROJECT_INDEX.md  README.md  THIRD_PARTY.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish-comfyui-registry.yml  tests.yml
atlas/: __init__.py
atlas_camera/: __init__.py
atlas_camera/comfy/: __init__.py  fingerprints.py  headless_evidence.py  node_helpers.py  node_registry.py  node_reports.py  nodes.py  nodes_depth.py  nodes_experimental.py  nodes_export.py  nodes_geometry.py  nodes_inpaint.py  nodes_qa.py  nodes_solve.py  nodes_viewport.py  view_prompts.py  viewport_payload.py
atlas_camera/core/: __init__.py  base.py  camera_math.py  camera_path.py  confidence.py  depth_geometry.py  extrinsics.py  hidden_geometry.py  intrinsics.py  io.py  mesh_repair.py  mesh_retopo.py  normals.py  plane_extraction.py  projection_scene.py  proxy_geometry.py  relief_mesh.py  room_layout.py  scene_health.py  schema.py  solver.py  validators.py  vanishing_points.py
atlas_camera/datasets/: __init__.py  benchmark.py  colmap.py  dtu.py  eth3d.py
atlas_camera/exporters/: __init__.py  _layers.py  _plate.py  manifest.py  (+6 more)
docs/: 2026-07-18_V1_OUTLIER_STRETCHED_EDGE_WORKLOG.md  ARCHITECTURE.md  ATLAS_TECHNICAL_PORTFOLIO_SUMMARY.md  ATLASresearch-report.md  CAMERA_MOVES.md  COMFY_WORKFLOW.md  COWORK_HANDOFF.md  DCC_EXPORTS.md  DECISIONS.md  DESIGN_RULES.md  ECOSYSTEM_GUIDE.md  GAUSSIAN_SPLATS.md  MCP_SERVER.md  MIGRATION_NOTES.md  NODE_CATALOG.md  PROJECT_VISION.md  QWEN_DATASET_PROMPTS.md  ROADMAP.md  TECH_AND_DIFFERENTIATION.md  THIRD_PARTY.md  UI_WORKBENCH.md  USER_GUIDE.md  V1_EDGE_OUTLIER_CLEANUP.md  atlas_occlusion_mask_implementation_plan.md
examples/: 2026-07-18_atlas_raw_quickstart_workflow_hidden_diagnostic.json  2026-07-18_atlas_raw_quickstart_workflow_hidden_sdxl_native_api.json  2026-07-18_atlas_raw_quickstart_workflow_hidden_segmented_sdxl.json  atlas_3layer_sky_machine_foreground_moge_workflow.json  atlas_4layer_boundedband_bgcard_moge_workflow.json  atlas_BuildingsTest.json  atlas_camera_complete_dmp_workflow.json  atlas_camera_composable_geometry_workflow.json  atlas_camera_core_projection_workflow.json  atlas_camera_depth_backend_comparison_workflow.json  atlas_camera_full_workflow.json  atlas_camera_hidden_geometry_canyon_workflow.json  atlas_camera_hidden_geometry_cathedral_workflow.json  atlas_camera_hidden_geometry_jungle_temple_workflow.json  atlas_camera_hidden_geometry_space_hangar_workflow.json  atlas_camera_hidden_geometry_steep_ridge_workflow.json  atlas_camera_hidden_geometry_wide_valley_workflow.json  atlas_camera_hole_mask_workflow.json  atlas_camera_inpaint_layers_hangar_workflow.json  atlas_camera_inpaint_layers_workflow.json  atlas_camera_learned_workflow.json  atlas_camera_lights_and_output_desk_workflow.json  atlas_camera_luminance_stack_acescg_workflow.json  atlas_camera_master_dmp_subgraph_workflow.json  atlas_camera_master_dmp_workflow.json  atlas_camera_merge_interior_clutter_workflow.json  atlas_camera_merge_threeway_exterior_workflow.json  atlas_camera_merge_towers_relief_workflow.json  atlas_camera_multiangle_patch_proof_workflow.json  atlas_camera_occlusion_mask_test_workflow.json  atlas_camera_ocio_full_float_hangar_workflow.json  atlas_camera_path_test_workflow.json  atlas_camera_reference_scale_workflow.json  atlas_camera_render_fix_v2_loop_workflow.json  atlas_camera_shot_cam_visual_test_workflow.json  atlas_camera_shot_cam_workflow.json  atlas_camera_sky_dome_workflow.json  atlas_camera_skyline_walls_workflow.json  atlas_camera_staged_master_agentic_assessment_workflow.json  atlas_camera_staged_master_workflow.json  (+15 more)
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
tests/: conftest.py  test_add_patch_view.py  test_agentic_workflow_smoke.py  test_angle_patch_nodes.py  test_artist_guided_constraints.py  test_assess_image.py  test_assess_output.py  test_atlas_input.py  test_blender_exporter.py  test_camera_facing_convention.py  test_camera_math.py  test_camera_path.py  test_camera_path_export_node.py  test_camera_registry.py  test_camera_solver_vanishing_points.py  test_canonical_ocio_dcc_workflows.py  test_cleanplate_stack.py  test_comfy_node_registry.py  test_confidence_contract.py  test_dataset_adapters.py  test_debug_report.py  test_debug_report_parity.py  test_depth_estimator.py  test_depth_estimator_da3.py  test_depth_estimator_moge.py  test_depth_geometry.py  test_depth_height.py  test_depth_map_node.py  test_depth_outlier_mask.py  test_derive_geometry_nodes.py  test_exact_patch_view.py  test_example_workflows.py  test_experimental_gate.py  test_export_plate_exr.py  test_export_relief_mesh_fill.py  test_extract_angle.py  test_facade_surface.py  test_fixer_render_fix.py  test_fixer_training_pairs.py  test_frontend_mirrors.py  (+69 more)
tools/: audit_node_usage.py  benchmark_datasets.py  build_raw_hidden_diagnostic.py  build_raw_hidden_inpaint_sdxl.py  build_raw_hidden_inpaint_sdxl_native_api.py  build_raw_hidden_inpaint_tagged.py  build_raw_hidden_segmented_sdxl.py  build_review_package.py  compare_depth_backends.py  export_depth_v2_onnx.py  fix_workflow_widget_drift.py  generate_atlas_canonical_workflows.py  generate_canonical_ocio_dcc_workflows.py  generate_canonical_trust_workflow.py  generate_castle_dmp_workflow.py  generate_companion_workflows.py  generate_fixer_training_pairs.py  generate_qwen_dataset.py  generate_segmented_sdxl_manual_debug_workflow.py  generate_segmented_sdxl_showcase_workflow.py  generate_showcase_workflows.py  list_references.py  migrate_from_maya2comfy.py  normalize_workflow_paths.py  orbit_stress_test.py  port_sam3segment_to_atlas.py  rebuild_shipping_quickstarts.py  rebuild_staged_master_workflow.py  run_ui_workflow.py  smoke_agentic_assessment_workflows.py  smoke_check.py  solve_constraints.py  solve_image.py  validate_review_package.py  validate_ui_workflow.py
ui/: atlas-ui_v2.jsx  index.html  package-lock.json  package.json  vite.config.ts
(+200 files in other folders)
