[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-camera"
version = "0.4.3"
description = "Recover the camera from a single still (up to 8K) and build a color-managed projection scene for Nuke, Maya and USD, reviewable with simple camera moves in a real-time viewport."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Atlas Camera Contributors"}
]
keywords = [
    "camera-solve",
    "projection",
    "matte-painting",
    "dcc",
    "usd",
    "comfyui",
    "matchmove",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []

[project.urls]
Repository = "https://github.com/mikejamesvfx/atlas-camera"

[project.optional-dependencies]
# Learned single-image camera prior (GeoCalib). torch is expected to already be
# present in the host environment (e.g. ComfyUI's venv). geocalib is published
# only on GitHub, so it is installed separately:
#   pip install "git+https://github.com/cvg/GeoCalib.git"
neural = [
    "numpy>=1.24",
    "torch>=2.0",
    "transformers>=4.40",        # Depth Anything V2 monocular depth
    "geocalib @ git+https://github.com/cvg/GeoCalib.git",
]
# Depth Anything 3 backend (opt-in). GitHub-only package whose own dependency
# list is heavy and includes xformers and numpy<2 — installing this extra into
# an existing ComfyUI venv can downgrade/clobber torch or numpy. For ComfyUI
# venvs prefer the --no-deps route documented in INSTALL.md.
neural-da3 = [
    "numpy>=1.24",
    "torch>=2.0",
    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/Depth-Anything-3.git",
]
image = [
    "pillow>=10",
]
vision = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]
usd = [
    "usd-core>=22.11",
]
dev = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pytest>=8",
]
ui = [
    "fastapi>=0.110",
    "pillow>=10",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27",
]

# ComfyUI Registry metadata (`comfy node publish`). PublisherId must match a
# publisher created at registry.comfy.org before the first publish.
[tool.comfy]
PublisherId = "mikejamesvfx"
DisplayName = "Atlas Camera"
Icon = "https://cdn.jsdelivr.net/gh/mikejamesvfx/atlas-camera@main/assets/atlas_camera_icon.svg"

[tool.setuptools.packages.find]
# EXACT names + dotted-subpackage globs only. The earlier "atlas*" glob also
# matched atlas_exports/ and atlas_ui_projects/ — gitignored RUNTIME OUTPUT
# dirs present on any dev machine — and shipped 800+ files of local test
# exports in the wheel (found by the beta-0.3 packaging audit). "atlas.*"
# cannot match them: the dot only matches subpackages of the atlas facade.
include = ["atlas", "atlas.*", "atlas_camera", "atlas_camera.*"]

[tool.setuptools.package-data]
"atlas_camera.reference_data" = ["*.json"]
"atlas_camera.inference" = ["fixer_shim/*.py"]
# The ComfyUI frontend IS package data — without these a non-editable pip
# install ships a dead viewport (found by the beta-0.3 wheel audit; invisible
# on dev machines where the editable install + custom_nodes symlink serve
# files from the checkout).
"atlas_camera.comfy" = ["web/*.js", "web/lib/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
