[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-camera"
version = "0.7.0"
description = "Recover the camera from a single still (up to 8K) and build a color-managed projection scene for Nuke, Maya and USD, reviewable with simple camera moves in a real-time viewport."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Atlas Camera Contributors"}
]
keywords = [
    "camera-solve",
    "projection",
    "matte-painting",
    "dcc",
    "usd",
    "comfyui",
    "matchmove",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []

[project.urls]
Repository = "https://github.com/mikejamesvfx/atlas-camera"

[project.optional-dependencies]
# Learned single-image camera prior (GeoCalib). torch is expected to already be
# present in the host environment (e.g. ComfyUI's venv). geocalib is published
# only on GitHub, so it is installed separately:
#   pip install "git+https://github.com/cvg/GeoCalib.git"
neural = [
    "numpy>=1.24",
    "torch>=2.0",
    "transformers>=4.40",        # Depth Anything V2 monocular depth
    "geocalib @ git+https://github.com/cvg/GeoCalib.git",
    # Atlas never imports kornia — it is a GeoCalib dependency, declared bare
    # and unpinned upstream, so an uncapped resolve grabs the newest release.
    # kornia 0.8.3 dropped the `pad` re-export from
    # kornia.geometry.transform.pyramid (present 0.7.2–0.8.2), which
    # ComfyUI-LTXVideo imports by name — installing Atlas's neural extras
    # otherwise breaks LTXVideo's import entirely, with nothing pointing back
    # here as the cause. GeoCalib is unaffected on 0.8.2. See INSTALL.md.
    "kornia<0.8.3",
]
# Depth Anything 3 backend (opt-in). GitHub-only package whose own dependency
# list is heavy and includes xformers and numpy<2 — installing this extra into
# an existing ComfyUI venv can downgrade/clobber torch or numpy. For ComfyUI
# venvs prefer the --no-deps route documented in INSTALL.md.
neural-da3 = [
    "numpy>=1.24",
    "torch>=2.0",
    "depth-anything-3 @ git+https://github.com/ByteDance-Seed/Depth-Anything-3.git",
]
# MoGe-2 monocular geometry backend (opt-in). MIT-licensed, light-dependency
# alternative to DA3: metric depth + predicted normals, fed the solve's focal as
# fov_x. GitHub-only like GeoCalib/DA3; torch/torchvision/opencv/scipy expected
# from the host env. Into an existing ComfyUI venv prefer the --no-deps route in
# INSTALL.md (moge's own list pulls gradio/matplotlib/pipeline).
moge = [
    "numpy>=1.24",
    "torch>=2.0",
    "moge @ git+https://github.com/microsoft/MoGe.git",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git@3fab839f0be9931dac7c8488eb0e1600c236e183",
]
# Native SAM3 (AtlasSAM3Mask) — transformers-only, no triton/comfyui-rmbg dependency, so it
# works on Mac (MPS) / CPU / AMD where the third-party SAM3Segment node (which hard-requires
# triton) cannot load at all. SAM3's model classes only exist from transformers ~5.5, hence
# the separate, narrower pin from [neural]'s own >=4.40 floor. facebook/sam3 is GATED on
# Hugging Face (Meta's SAM-License-1.0) — one-time `hf auth login` (or HF_TOKEN env) required
# after requesting access at https://huggingface.co/facebook/sam3.
sam3 = [
    "numpy>=1.24",
    "torch>=2.0",
    "transformers>=5.5.4,<6",
]
image = [
    "pillow>=10",
]
# Colour-managed float plate I/O (EXR/DPX) — Atlas's own, replacing opencv's
# image codec for anything scene-referred. opencv's EXR support is disabled at
# runtime by default (security, since 4.5.5), is absent entirely from the
# opencv-python 5.x wheels (the wheel reports `OpenEXR: NO`; opencv 5 itself
# kept EXR — cf. opencv#26673), and is shipped by three distributions that all
# own the `cv2` namespace and arrive as transitive deps of unrelated packs. No
# pin can make that reliable, so the float path does not depend on it.
#
# OpenImageIO is the VFX-industry library (same foundation as OpenEXR/OpenColorIO)
# and carries a BUILT-IN ACES OCIO config, so ACEScg/ACEScct/ACES2065-1 work with
# no `opencolorio` install and no $OCIO for the user to configure. Wheels cover
# Windows, Linux and macOS including Apple Silicon (macosx_11_0_arm64, cp39-cp314).
oiio = [
    "numpy>=1.24",
    "OpenImageIO>=3.0",
]
vision = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]
usd = [
    "usd-core>=22.11",
]
# Camera RAW input (AtlasLoadRAW 📷): rawpy bundles libraw (NEF/CR2/CR3/RAF/
# ARW incl. X-Trans). opencv pinned <5 — the 5.x wheels dropped the EXR codec
# the linear-sidecar write depends on (same constraint as the OCIO path; also
# needs OPENCV_IO_ENABLE_OPENEXR=1 set before python starts).
raw = [
    "numpy>=1.24",
    "pillow>=10",
    "rawpy>=0.19",
    "exifread>=3.0",
    "opencv-python>=4.8,<5",
]
# Lensfun geometry correction for AtlasLoadRAW's undistort toggle. A separate
# extra deliberately: lensfunpy wheels can lag new Python/Windows releases,
# and RAW decode/metadata must keep working without it.
raw-lens = [
    "lensfunpy>=1.12",
]
# The Atlas MCP server (python -m atlas_camera.mcp) — a thin stdio server
# exposing a running ComfyUI to MCP-capable assistants. Stdlib + the mcp SDK
# only; never imports torch/numpy (ComfyUI stays the execution engine).
mcp = [
    "mcp>=1.2",
]
dev = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pytest>=8",
    # mesh_retopo.smooth_relax() treats trimesh as always-available ("the
    # guaranteed runnable baseline on every machine" — see its docstring) and
    # test_{nuke,maya}_layers_export.py exercise that path for real rather
    # than skipping it. Undeclared here, `pip install -e ".[dev]"` followed
    # by `pytest -q` (INSTALL.md's documented test recipe) only stays green
    # by accident: torch's absence in a bare dev venv makes those two test
    # modules importorskip themselves out entirely. The same command inside
    # any real ComfyUI venv (which always ships torch) hits a bare
    # ModuleNotFoundError instead.
    "trimesh>=4.0",
    # ...and trimesh alone is not enough. Its only REQUIRED dependency is
    # numpy; scipy is an optional `trimesh[easy]` extra, lazily raised only
    # when a scipy-backed path is touched. smooth_relax() calls Taubin
    # smoothing, whose laplacian goes through trimesh.graph -> scipy, so
    # declaring trimesh here UN-SKIPS the retopo smooth test and it then dies
    # on `ModuleNotFoundError: No module named 'scipy'`. Depended on directly
    # rather than via trimesh[easy], which pulls considerably more.
    "scipy>=1.10",
]
ui = [
    "fastapi>=0.110",
    "pillow>=10",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27",
]

# ComfyUI Registry metadata (`comfy node publish`). PublisherId must match a
# publisher created at registry.comfy.org before the first publish.
[tool.comfy]
PublisherId = "mikejamesvfx"
DisplayName = "Atlas Camera"
Icon = "https://cdn.jsdelivr.net/gh/mikejamesvfx/atlas-camera@main/assets/atlas_camera_icon.svg"

[tool.setuptools.packages.find]
# EXACT names + dotted-subpackage globs only. The earlier "atlas*" glob also
# matched atlas_exports/ and atlas_ui_projects/ — gitignored RUNTIME OUTPUT
# dirs present on any dev machine — and shipped 800+ files of local test
# exports in the wheel (found by the beta-0.3 packaging audit). "atlas.*"
# cannot match them: the dot only matches subpackages of the atlas facade.
include = ["atlas", "atlas.*", "atlas_camera", "atlas_camera.*"]

[tool.setuptools.package-data]
"atlas_camera.reference_data" = ["*.json"]
"atlas_camera.inference" = ["fixer_shim/*.py"]
# The ComfyUI frontend IS package data — without these a non-editable pip
# install ships a dead viewport (found by the beta-0.3 wheel audit; invisible
# on dev machines where the editable install + custom_nodes symlink serve
# files from the checkout).
"atlas_camera.comfy" = ["web/*.js", "web/lib/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
